@@ -6,7 +6,7 @@ Description: Resolve losing keyboard shortcuts on login
  .
 Author: David Mohammed <fossfreedom@ubuntu.com>
 Forwarded: https://github.com/solus-project/budgie-desktop/pull/1907
-Last-Update: 2019-11-05
+Last-Update: 2019-12-30
 
 --- a/src/wm/shim.vala
 +++ b/src/wm/shim.vala
@@ -30,9 +30,12 @@ Last-Update: 2019-11-05
  
          display = wm.get_display();
          display.accelerator_activated.connect(on_accelerator_activated);
-@@ -196,60 +194,58 @@
+@@ -194,62 +192,62 @@
+     }
+ 
  #if HAVE_MUTTER_5
-     private void on_accelerator_activated(uint action, Clutter.InputDevice dev, uint device_id)
+-    private void on_accelerator_activated(uint action, Clutter.InputDevice dev, uint device_id)
++    private void on_accelerator_activated(uint action, Clutter.InputDevice dev, uint timestamp)
  #else
 -    private void on_accelerator_activated(uint action, uint device_id)
 +    private void on_accelerator_activated(uint action, uint device_id, timestamp)
@@ -48,12 +51,14 @@ Last-Update: 2019-11-05
 +        foreach (string accelerator in grabs.get_keys ()) {
 +            if (grabs[accelerator] == action) {
 +                var params = new GLib.HashTable<string, Variant> (null, null);
-+                params.set ("device-id", new Variant.uint32 (device_id));
-+#if HAV_MUTTER_5
-+                params.set ("timestamp", new Variant.uint32 (timestamp));
++#if HAVE_MUTTER_5
++                params.set ("device-id", new Variant.uint32 (dev.id));
++                params.set ("action-mode", new Variant.uint32 (action));
++                params.set ("device-mode", new Variant.string (dev.get_device_node()));
 +#else
-+                params.set ("timestamp", new Variant.uint32 (0));
++                params.set ("device-id", new Variant.uint32 (device_id));
 +#endif
++                params.set ("timestamp", new Variant.uint32 (timestamp));
 +                this.accelerator_activated (action, params);
 +            }
 +        }
@@ -64,12 +69,12 @@ Last-Update: 2019-11-05
      {
 -        unowned string val;
 -        unowned uint key;
--
++        uint? action = grabs[accelerator];
+ 
 -        if (!watches.contains(name)) {
 -            return;
 -        }
-+        uint? action = grabs[accelerator];
- 
+-
 -        uint id = watches.lookup(name);
 -        Bus.unwatch_name(id);
 -
@@ -91,12 +96,12 @@ Last-Update: 2019-11-05
  
 -#if HAVE_GSD_332
 -    private uint _grab(string sender, string seq, uint flag, Meta.KeyBindingFlags grab_flags)
-+    public uint[] grab_accelerators (GsdAccel[] accelerators) throws DBusError, IOError
-     {
+-    {
 -        var ret = display.grab_accelerator(seq, grab_flags);
 -#else
 -    private uint _grab(string sender, string seq, uint flag)
--    {
++    public uint[] grab_accelerators (GsdAccel[] accelerators) throws DBusError, IOError
+     {
 -        var ret = display.grab_accelerator(seq);
 -#endif
 +        uint[] actions = {};
@@ -128,7 +133,7 @@ Last-Update: 2019-11-05
          }
  
          return ret;
-@@ -273,42 +269,19 @@
+@@ -273,43 +271,30 @@
              on_bus_acquired, null, null);
      }
  
@@ -146,32 +151,39 @@ Last-Update: 2019-11-05
 -            t += _grab(sender, a.accelerator, a.flags, a.grab_flags);
 -        }
 -        return t;
--    }
++        return grab_accelerators(accelerators);
+     }
 -#else
 -    public uint GrabAccelerator(BusName sender, string accelerator, uint flags)
--    {
++
++    public bool UngrabAccelerator(BusName sender, uint action)
+     {
 -        return _grab(sender, accelerator, flags);
-+        return grab_accelerators(accelerators);
++        return ungrab_accelerator (action);
      }
  
 -    public uint[] GrabAccelerators(BusName sender, GsdAccel[] accelerators)
--    {
++#if HAVE_MUTTER_5
++    public bool UngrabAccelerators(BusName sender, uint[] actions)
+     {
 -        uint[] t = { };
 -        foreach (var a in accelerators) {
 -            t += _grab(sender, a.accelerator, a.flags);
--        }
++        foreach (uint action in actions) {
++            ungrab_accelerator (action);
+         }
 -        return t;
--    }
--#endif
++        return true;
+     }
+ #endif
 -    public bool ungrab_accelerator(BusName sender, uint action)
-+    public bool UngrabAccelerator(BusName sender, uint action)
-     {
+-    {
 -        if (display.ungrab_accelerator(action)) {
 -            grabs.remove(action);
 -            return true;
 -        }
 -        return false;
-+        return ungrab_accelerator (action);
-     }
+-    }
  
      /**
+      * Show the OSD when requested.
